--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "2.0.0-beta.7",
+  "version": "2.0.0-pre.1",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -29,32 +29,32 @@
     "@leomotors/scripts": "^3.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/marked": "^4.0.3",
-    "@types/node": "^18.0.0",
-    "@types/sinon": "^10.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
+    "@types/node": "^18.0.3",
+    "@types/sinon": "^10.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "autoprefixer": "^10.4.7",
     "c8": "^7.11.3",
-    "eslint": "^8.18.0",
-    "npm-check-updates": "^14.1.1",
+    "eslint": "^8.19.0",
+    "npm-check-updates": "^15.0.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
     "tailwindcss": "^3.1.4",
-    "ts-node": "^10.8.1",
-    "typedoc": "^0.23.1",
+    "ts-node": "^10.8.2",
+    "typedoc": "^0.23.5",
     "typescript": "^4.7.4",
-    "uglify-js": "^3.16.1",
+    "uglify-js": "^3.16.2",
     "vitepress": "^1.0.0-alpha.4",
-    "vitest": "^0.16.0",
+    "vitest": "^0.17.0",
     "vue": "^3.2.37"
   },
   "dependencies": {
     "chalk": "4.1.2",
     "commander": "^9.3.0",
-    "discord.js": "^14.0.0-dev.1656158629-c4653f9"
+    "discord.js": "^14.0.0-dev.1657109083-8198da5"
   },
   "exports": {
     ".": "./dist/main/index.js",
