--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "2.0.0-pre.1",
+  "version": "2.0.0-pre.2",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": "https://github.com/Leomotors/cocoa-discord-utils",
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn lm:config && tsc && ts-node postbuild.script.ts dist/**/*.js dist/*/**/*.js && rimraf \"dist/cli/**/*.d.ts\"",
-    "clean": "rimraf dist/*",
+    "clean": "rimraf dist/* coverage docs-dist typedoc-out",
     "cb": "yarn clean && yarn build",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
     "prepack": "yarn cb && yarn lint && yarn test",
@@ -19,6 +19,10 @@
     "ncu": "ncu -u \"/^(?!.*chalk)(?!.*globby).*$/\"",
     "docs:dev": "vitepress dev docs",
     "docs": "yarn lm:config && vitepress build docs && typedoc && touch docs-dist/.nojekyll"
+  },
+  "packageManager": "yarn@3.2.1",
+  "bin": {
+    "cocoadu": "dist/cli/index.js"
   },
   "keywords": [
     "discord-bot",
@@ -37,24 +41,24 @@
     "autoprefixer": "^10.4.7",
     "c8": "^7.11.3",
     "eslint": "^8.19.0",
-    "npm-check-updates": "^15.0.5",
+    "npm-check-updates": "^15.2.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
-    "tailwindcss": "^3.1.4",
+    "tailwindcss": "^3.1.5",
     "ts-node": "^10.8.2",
-    "typedoc": "^0.23.5",
+    "typedoc": "^0.23.6",
     "typescript": "^4.7.4",
     "uglify-js": "^3.16.2",
     "vitepress": "^1.0.0-alpha.4",
-    "vitest": "^0.17.0",
+    "vitest": "^0.17.1",
     "vue": "^3.2.37"
   },
   "dependencies": {
     "chalk": "4.1.2",
     "commander": "^9.3.0",
-    "discord.js": "^14.0.0-dev.1657109083-8198da5"
+    "discord.js": "^14.0.0-dev"
   },
   "exports": {
     ".": "./dist/main/index.js",
@@ -95,8 +99,5 @@
         "./dist/slash/SlashSync.d.ts"
       ]
     }
-  },
-  "bin": {
-    "cocoadu": "dist/cli/index.js"
   }
 }
