--- a/turbo.json
+++ b/turbo.json
@@ -12,11 +12,7 @@
     "lint": {},
     "format": {},
     "docs": {},
-    "test": {
-      "dependsOn": [
-        "build"
-      ]
-    },
+    "test": {},
     "dev": {
       "cache": false
     }
