--- a/packages/cocoa-discord-utils/package.json
+++ b/packages/cocoa-discord-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cocoa-discord-utils",
-  "version": "2.3.0",
+  "version": "2.4.0-dev",
   "description": "Yet another Discord Bot Utility npm package",
   "main": "dist/main/index.js",
   "repository": {
