--- a/packages/cocoa-discord-utils/package.json
+++ b/packages/cocoa-discord-utils/package.json
@@ -11,7 +11,7 @@
   "author": "Leomotors",
   "license": "MIT",
   "scripts": {
-    "build": "pnpm lm:config && tsc && ts-node postbuild.script.ts dist/**/*.js dist/*/**/*.js && rimraf \"dist/cli/**/*.d.ts*\"",
+    "build": "pnpm lm:config && tsc && rimraf \"dist/cli/**/*.d.ts*\"",
     "clean": "rimraf dist coverage docs-dist typedoc-out",
     "cb": "pnpm clean && pnpm build",
     "lm:config": "lm-config src/meta/cocoa_meta.g.ts",
@@ -49,7 +49,6 @@
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.14",
     "typescript": "^4.8.3",
-    "uglify-js": "^3.17.0",
     "vitest": "^0.23.4"
   },
   "dependencies": {
