--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,15 +11,16 @@
     "@cocoa-discord-utils/config": "workspace:0.0.0",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.1",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.11",
-    "eslint": "^8.23.1",
-    "eslint-plugin-vue": "^9.5.1",
-    "postcss": "^8.4.16",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.24.0",
+    "eslint-plugin-vue": "^9.6.0",
+    "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.1.2",
-    "vitepress": "1.0.0-alpha.15",
-    "vue": "^3.2.39"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.6",
+    "vitepress": "1.0.0-alpha.19",
+    "vue": "^3.2.40"
   }
 }
