--- a/packages/cocoa-discord/tsconfig.json
+++ b/packages/cocoa-discord/tsconfig.json
@@ -8,7 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "experimentalDecorators": true,
     "noUncheckedIndexedAccess": true,
     "outDir": "dist"
